[gd_scene load_steps=5 format=3 uid="uid://cfx40oo0d2mdr"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_6s4h7"]
[ext_resource type="PackedScene" uid="uid://b02ncl0w3nne2" path="res://scenes/level1.tscn" id="2_b7jq3"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="3_teugv"]
[ext_resource type="FontFile" uid="uid://c0apde5o5da0g" path="res://assets/fonts/PublicPixel.ttf" id="4_ub7nv"]

[node name="root" type="Node2D"]
script = ExtResource("1_6s4h7")

[node name="level1" parent="." instance=ExtResource("2_b7jq3")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(1.025, 1.025)
script = ExtResource("3_teugv")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 71.57
offset_right = 141.0
offset_bottom = 118.57
rotation = -0.268526
theme_override_fonts/font = ExtResource("4_ub7nv")
theme_override_font_sizes/font_size = 18
text = "Score: 0"

[connection signal="add_score" from="." to="." method="AddScore"]
[connection signal="change_to_next_scene" from="." to="." method="_on_change_to_next_scene"]
[connection signal="shake_camera" from="." to="Camera2D" method="_on_root_shake_camera"]
